# emulator

./: CMakeLists.txt  address_space.c  address_space.h  main.cpp  ram.c  ram.h  test_floppy.cpp
arch/x86/: bios.cpp  bios.h  lifter.cpp  lifter.h
arch/x86/semantics/: aaa.c  aad.c  aam.c  aas.c  adc.c  and.c  call.c  cbw.c  clc.c  cld.c  cli.c  cmc.c  cmp.c  cwd.c  daa.c  das.c  dec.c  immediate_operand.c  imul.c  inc.c  jcc.c  jmp.c  lds.c  memory.c  memory.h  memory_operand.c  memory_operand.h  mov.c  pop.c  push.c  register_file.c  register_file.h  register_operand.c  register_operand.h  types.h  xor.c
tests/: test_address_space.cpp  test_ram.cpp
tests/arch/x86/semantics/: test_aaa.cpp  test_aad.cpp  test_aam.cpp  test_aas.cpp  test_adc.cpp  test_add.cpp  test_and.cpp  test_call.cpp  test_cbw.cpp  test_clc.cpp  test_cld.cpp  test_cli.cpp  test_cmc.cpp  test_cmp.cpp  test_cwd.cpp  test_daa.cpp  test_das.cpp  test_dec.cpp  test_imul.cpp  test_inc.cpp  test_jcc.cpp  test_jmp.cpp  test_lds.cpp  test_mov.cpp  test_pop.cpp  test_push.cpp  test_xor.cpp  x86_semantics_test.cpp  x86_semantics_test.h
tests/utils/: test_avl_tree.cpp
utils/: avl_tree.c  avl_tree.h
x86/lifting/: ADD.c  add.c  immediate_operand.h  memory.h  memory_operand.h  operand.h  register_file.h  register_operand.c
